force-app/main/default/objects/SVMXC__Timesheet_Entry__c/SVMXC__Timesheet_Entry__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>This object refers to time logged by every user on per day basis for the timesheet master record.</description>
    <label>Time Entry</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Time Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>