force-app/main/default/objects/SVMXC__Timesheet_Entry__c/fields/SVMXC__SM_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Time_Zone__c</fullName>
    <description>This will store the Time zone value for Time Entry creation.</description>
    <label>Time Zone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>