force-app/main/default/objects/SVMXC__Timesheet_Entry__c/fields/SVMXC__SM_Type__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Illumina Training</fullName>
            </value>
            <value>
                <fullName>Illumina Customer Event</fullName>
            </value>
            <value>
                <fullName>Projects</fullName>
            </value>
            <value>
                <fullName>Committees</fullName>
            </value>
            <value>
                <fullName>Channel Partner Support</fullName>
                <label>Channel-TPSP Support</label>
            </value>
            <value>
                <fullName>TS Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>