force-app/main/default/objects/SVMXC__Timesheet_Entry__c/fields/SVMXC__Task__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Task__c</fullName>
    <description>This field refers to relation between Time Entry and Task</description>
    <label>Task</label>
    <length>50</length>
    <type>Text</type>
</CustomField>