force-app/main/default/objects/SVMXC__Timesheet_Entry__c/fields/SVMXC__Work_Detail__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Work_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field refers to relation between Time Entry and Work Detail</description>
    <label>Work Detail</label>
    <referenceTo>SVMXC__Service_Order_Line__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entrys</relationshipName>
    <type>Lookup</type>
</CustomField>